fix(css): add "white-space: pre-wrap" to PRE tag
to make long lines wrap correctly

--- a/builders/html/assets/css/base.css
+++ b/builders/html/assets/css/base.css
@@ -5867,6 +5867,7 @@ pre {
   padding: 12px 8px;
   word-break: break-all;
   word-wrap: break-word;
+  white-space: pre-wrap;
 }
 pre code {
   background-color: transparent;
